--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>mozzarella</li>
       <li>pepper jack</li>
     </ul>
-  <li>1 tbsp of butter.</li>
+  <li>1 tbsp of butter</li>
 </ul>
   
 <ol>
